--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,19 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" type="text/css" href="node_modules/bootstrap-grid/dist/grid.min.css">
+  <link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.min.css">
+
+  <style>
+    html, body {
+      height: 100%;
+      padding: 0;
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
-  <app-root></app-root>
+  <app-container></app-container>
 </body>
 </html>
